media/css/mozorg/home/home.scss
/* ... */
body {
    border-top: 0;
}

// Header
#masthead {
    background: #ff8c8e;
    color: #000;

    .content {
        padding: 51px 20px 0;
    }

    .masthead-logo {
        background: #ff8c8e;
        height: 30px;
        left: 0;
        margin: 0;
        padding: 10px 0;
        position: absolute;
        text-align: center;
        top: 0;
        width: 100%;

        img {
            height: 30px;
        }
    }
}

#nav-download-firefox {
    display: none;
}

@media #{$mq-tablet} {
    #masthead {
        background: #ff8c8e;
        padding: 0;

        .content {
            padding-top: 0;
        }

        .masthead-logo {
            float: left;
            position: relative;
            width: 115px;
        }
    }

    #nav-main-menu,
    .js #nav-main-menu {
        padding: 15px 0;

        li {
            border-right: 1px solid #000;

            &:last-child {
                border-right: 0;
                padding-right: 0;
            }
        }

        a,
        a:hover,
        a:focus {
            color: #000;
        }
    }
}

@media #{$mq-desktop} {
    #nav-main-menu,
    .js #nav-main-menu {
        li {
            padding: 0 20px;
        }
    }

    #nav-download-firefox {
        display: inline-block;
        float: right;

        ul.download-list {
            margin-bottom: 0;
        }

        .button {
            @include font-size(14px);
            border-radius: 0;
            padding: 13px 20px;
            text-decoration: none;
            text-transform: uppercase;
        }

        .fx-privacy-link {
            display: none;
        }
    }
}

// flexbox layout for savvy browsers to push nav items to the right
@supports (display: flex) {
    @media #{$mq-tablet} {
        #nav-main-menu,
        .js #nav-main-menu {
            @include flexbox;
            @include justify-content(flex-end);
        }
    }
}

main {
    overflow: hidden;
}


// *** INTRO *** //
#intro {
    background: #00a7de;
    color: #fff;
    position: relative;

    h2,
    h3 {
        @include border-box;
        color: #fff;
        margin: 0 auto;
        text-align: center;
        text-shadow: 0 0 10px rgba(0, 0, 0, .01),
                     0 0 5px rgba(0, 0, 0, .025),
                     0 1px 1px rgba(0, 0, 0, .5);
    }

    .content {
        background: rgba(0, 20, 40, .5);
        display: block;
        height: 100%;
        padding: 20px;
        position: relative;
        width: 100%;
        z-index: 2;
    }

    h2 {
        @include font-size(32px);
        font-style: italic;
        line-height: 1.3;
        padding: 70px 40px;
        max-width: $width-desktop;

        @media #{$mq-tablet} {
            @include font-size(48px);
        }

        @media #{$mq-tablet} and #{$mq-tall} {
            padding: 110px 40px;
        }

        @media #{$mq-desktop} and #{$mq-tall} {
            padding: 130px 40px;
        }

        @media #{$mq-desktop-wide} {
            @include font-size(56px);
        }

        @media #{$mq-desktop-wide} and #{$mq-tall} {
            padding: 150px 40px;
        }
    }

    h3 {
        @include font-size(20px);
        line-height: 1.3;
        padding: 0 40px 10px;
        max-width: $width-tablet;

        @media #{$mq-tablet} {
            @include font-size(22px);
        }

        @media #{$mq-desktop} {
            @include font-size(26px);
        }

        @media #{$mq-desktop-wide} {
            @include font-size(28px);
            padding-bottom: 20px;
        }
    }

    #home-slideshow {
        height: 100%;
        left: 0;
        overflow: hidden;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 1;
    }

    .slide {
        @include background-size(cover);
        background-position: center center;
        background-repeat: no-repeat;
        display: none;
        height: 100%;
        width: 100%;
    }

    #slide-two {
        display: block;
        background-image: url('/media/img/home/2016/intro/intro-learning-600.jpg');
    }

    @media #{$mq-tablet} {
        .slide {
            display: block;
        }

        #slide-one {
            background-image: url('/media/img/home/2016/intro/intro-mitchell-1000.jpg');
        }

        #slide-two {
            background-image: url('/media/img/home/2016/intro/intro-learning-1000.jpg');
        }

        #slide-three {
            background-image: url('/media/img/home/2016/intro/intro-advocacy-1000.jpg');
        }

        #slide-four {
            background-image: url('/media/img/home/2016/intro/intro-vr-1000.jpg');
        }
    }

    @media #{$mq-desktop-wide} {
        #slide-one {
            background-image: url('/media/img/home/2016/intro/intro-mitchell-2000.jpg');
        }

        #slide-two {
            background-image: url('/media/img/home/2016/intro/intro-learning-2000.jpg');
        }

        #slide-three {
            background-image: url('/media/img/home/2016/intro/intro-advocacy-2000.jpg');
        }

        #slide-four {
            background-image: url('/media/img/home/2016/intro/intro-vr-2000.jpg');
        }
    }
}

@media #{$mq-desktop} {
    [lang^='en'] {
        #intro h2 {
            @include font-size(56px);
        }
    }
}

@media #{$mq-desktop-wide} {
    [lang^='en'] {
        #intro h2 {
            @include font-size(64px);
        }
    }
}
/* ... */

